--- a/folderize-feature-branches-better/index.html
+++ b/folderize-feature-branches-better/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1380839439022">
+<html manifest="manifest.appcache?1380840585739">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -32,7 +32,7 @@ require('./main')
     "pixie.cson": {
       "path": "pixie.cson",
       "mode": "100644",
-      "content": "version: \"0.2.0\"\nwidth: 960\nheight: 800\nremoteDependencies: [\n  \"//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\"\n  \"//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\"\n  \"//code.jquery.com/jquery-1.10.1.min.js\"\n  \"//d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js\"\n  \"http://strd6.github.io/tempest/javascripts/envweb.js\"\n  \"http://strd6.github.io/require/v0.2.1.js\"\n]\ndependencies:\n  issues: \"STRd6/issues:master\"\n  test_runner: \"STRd6/tests:master\"\n  sandbox: \"STRd6/sandbox:master\"\n  notifications: \"STRd6/notifications:master\"\n  md: \"STRd6/md:v0.2.3\"\n  github: \"STRd6/github:v0.3.0-alpha.1\"\n  hygiene: \"STRd6/hygiene:v0.1.0\"\n  runtime: \"STRd6/runtime:v0.1.1\"\n  packager: \"STRd6/packager:v0.3.0-alpha.6\"\n  filetree: \"STRd6/filetree:v0.2.0\"\n",
+      "content": "version: \"0.2.0\"\nwidth: 960\nheight: 800\nremoteDependencies: [\n  \"//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\"\n  \"//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\"\n  \"//code.jquery.com/jquery-1.10.1.min.js\"\n  \"//d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js\"\n  \"http://strd6.github.io/tempest/javascripts/envweb.js\"\n  \"http://strd6.github.io/require/v0.2.1.js\"\n]\ndependencies:\n  issues: \"STRd6/issues:master\"\n  test_runner: \"STRd6/tests:master\"\n  sandbox: \"STRd6/sandbox:master\"\n  notifications: \"STRd6/notifications:master\"\n  md: \"STRd6/md:v0.2.3\"\n  github: \"STRd6/github:v0.3.0\"\n  hygiene: \"STRd6/hygiene:v0.1.0\"\n  runtime: \"STRd6/runtime:v0.1.1\"\n  packager: \"STRd6/packager:v0.3.0\"\n  filetree: \"STRd6/filetree:v0.2.0\"\n",
       "type": "blob"
     },
     "source/actions.coffee.md": {
@@ -146,7 +146,7 @@ require('./main')
     },
     "pixie": {
       "path": "pixie",
-      "content": "module.exports = {\"version\":\"0.2.0\",\"width\":960,\"height\":800,\"remoteDependencies\":[\"//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\",\"//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\",\"//code.jquery.com/jquery-1.10.1.min.js\",\"//d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js\",\"http://strd6.github.io/tempest/javascripts/envweb.js\",\"http://strd6.github.io/require/v0.2.1.js\"],\"dependencies\":{\"issues\":\"STRd6/issues:master\",\"test_runner\":\"STRd6/tests:master\",\"sandbox\":\"STRd6/sandbox:master\",\"notifications\":\"STRd6/notifications:master\",\"md\":\"STRd6/md:v0.2.3\",\"github\":\"STRd6/github:v0.3.0-alpha.1\",\"hygiene\":\"STRd6/hygiene:v0.1.0\",\"runtime\":\"STRd6/runtime:v0.1.1\",\"packager\":\"STRd6/packager:v0.3.0-alpha.6\",\"filetree\":\"STRd6/filetree:v0.2.0\"}};",
+      "content": "module.exports = {\"version\":\"0.2.0\",\"width\":960,\"height\":800,\"remoteDependencies\":[\"//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\",\"//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\",\"//code.jquery.com/jquery-1.10.1.min.js\",\"//d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js\",\"http://strd6.github.io/tempest/javascripts/envweb.js\",\"http://strd6.github.io/require/v0.2.1.js\"],\"dependencies\":{\"issues\":\"STRd6/issues:master\",\"test_runner\":\"STRd6/tests:master\",\"sandbox\":\"STRd6/sandbox:master\",\"notifications\":\"STRd6/notifications:master\",\"md\":\"STRd6/md:v0.2.3\",\"github\":\"STRd6/github:v0.3.0\",\"hygiene\":\"STRd6/hygiene:v0.1.0\",\"runtime\":\"STRd6/runtime:v0.1.1\",\"packager\":\"STRd6/packager:v0.3.0\",\"filetree\":\"STRd6/filetree:v0.2.0\"}};",
       "type": "blob"
     },
     "source/actions": {
@@ -1026,7 +1026,7 @@ require('./main')
       }
     },
     "github": {
-      "version": "0.3.0-alpha.1",
+      "version": "0.3.0",
       "source": {
         "LICENSE": {
           "path": "LICENSE",
@@ -1061,7 +1061,7 @@ require('./main')
         "pixie.cson": {
           "path": "pixie.cson",
           "mode": "100644",
-          "content": "version: \"0.3.0-alpha.1\"\nremoteDependencies: [\n  \"//code.jquery.com/jquery-1.10.1.min.js\"\n  \"http://strd6.github.io/tempest/javascripts/envweb.js\"\n  \"http://strd6.github.io/require/master.js\"\n]\ndependencies:\n  emojer: \"STRd6/emojer:master\"\n",
+          "content": "version: \"0.3.0\"\nremoteDependencies: [\n  \"//code.jquery.com/jquery-1.10.1.min.js\"\n  \"http://strd6.github.io/tempest/javascripts/envweb.js\"\n  \"http://strd6.github.io/require/master.js\"\n]\ndependencies:\n  emojer: \"STRd6/emojer:master\"\n",
           "type": "blob"
         },
         "repository.coffee.md": {
@@ -1095,7 +1095,7 @@ require('./main')
         },
         "pixie": {
           "path": "pixie",
-          "content": "module.exports = {\"version\":\"0.3.0-alpha.1\",\"remoteDependencies\":[\"//code.jquery.com/jquery-1.10.1.min.js\",\"http://strd6.github.io/tempest/javascripts/envweb.js\",\"http://strd6.github.io/require/master.js\"],\"dependencies\":{\"emojer\":\"STRd6/emojer:master\"}};",
+          "content": "module.exports = {\"version\":\"0.3.0\",\"remoteDependencies\":[\"//code.jquery.com/jquery-1.10.1.min.js\",\"http://strd6.github.io/tempest/javascripts/envweb.js\",\"http://strd6.github.io/require/master.js\"],\"dependencies\":{\"emojer\":\"STRd6/emojer:master\"}};",
           "type": "blob"
         },
         "repository": {
@@ -1503,7 +1503,7 @@ require('./main')
           "pull": true
         },
         "network_count": 0,
-        "branch": "v0.3.0-alpha.1",
+        "branch": "v0.3.0",
         "defaultBranch": "master",
         "includedModules": [
           "Bindable"
@@ -1824,7 +1824,7 @@ require('./main')
       }
     },
     "packager": {
-      "version": "0.3.0-alpha.6",
+      "version": "0.3.0",
       "source": {
         "LICENSE": {
           "path": "LICENSE",
@@ -1847,7 +1847,7 @@ require('./main')
         "pixie.cson": {
           "path": "pixie.cson",
           "mode": "100644",
-          "content": "version: \"0.3.0-alpha.6\"\nentryPoint: \"packager\"\nremoteDependencies: [\n  \"//code.jquery.com/jquery-1.10.1.min.js\"\n  \"http://strd6.github.io/tempest/javascripts/envweb.js\"\n  \"http://strd6.github.io/require/v0.2.0.js\"\n]\n",
+          "content": "version: \"0.3.0\"\nentryPoint: \"packager\"\nremoteDependencies: [\n  \"//code.jquery.com/jquery-1.10.1.min.js\"\n  \"http://strd6.github.io/tempest/javascripts/envweb.js\"\n  \"http://strd6.github.io/require/v0.2.1.js\"\n]\n",
           "type": "blob"
         },
         "test/packager.coffee": {
@@ -1865,7 +1865,7 @@ require('./main')
         },
         "pixie": {
           "path": "pixie",
-          "content": "module.exports = {\"version\":\"0.3.0-alpha.6\",\"entryPoint\":\"packager\",\"remoteDependencies\":[\"//code.jquery.com/jquery-1.10.1.min.js\",\"http://strd6.github.io/tempest/javascripts/envweb.js\",\"http://strd6.github.io/require/v0.2.0.js\"]};",
+          "content": "module.exports = {\"version\":\"0.3.0\",\"entryPoint\":\"packager\",\"remoteDependencies\":[\"//code.jquery.com/jquery-1.10.1.min.js\",\"http://strd6.github.io/tempest/javascripts/envweb.js\",\"http://strd6.github.io/require/v0.2.1.js\"]};",
           "type": "blob"
         },
         "test/packager": {
@@ -1879,7 +1879,7 @@ require('./main')
       "remoteDependencies": [
         "//code.jquery.com/jquery-1.10.1.min.js",
         "http://strd6.github.io/tempest/javascripts/envweb.js",
-        "http://strd6.github.io/require/v0.2.0.js"
+        "http://strd6.github.io/require/v0.2.1.js"
       ],
       "repository": {
         "id": 13223375,
@@ -1970,7 +1970,7 @@ require('./main')
           "pull": true
         },
         "network_count": 0,
-        "branch": "v0.3.0-alpha.6",
+        "branch": "v0.3.0",
         "defaultBranch": "master",
         "includedModules": [
           "Bindable"
