--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1381860598932">
+<html manifest="manifest.appcache?1382048159585">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -1445,7 +1445,8 @@ require('./main')
           },
           "progenitor": {
             "url": "http://strd6.github.io/editor/"
-          }
+          },
+          "name": "emojer"
         }
       },
       "remoteDependencies": [
@@ -1551,7 +1552,8 @@ require('./main')
       },
       "progenitor": {
         "url": "http://strd6.github.io/editor/"
-      }
+      },
+      "name": "github"
     },
     "hygiene": {
       "version": "0.1.0",
