:bouquet::heavy_dollar_sign: Updated in browser at strd6.github.io/editor

--- a/refactor-actions/index.html
+++ b/refactor-actions/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1382050383288">
+<html manifest="manifest.appcache?1382050473224">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -1302,7 +1302,8 @@ require('./main')
           },
           "progenitor": {
             "url": "http://strd6.github.io/editor/"
-          }
+          },
+          "name": "emojer"
         }
       },
       "remoteDependencies": [
@@ -1407,7 +1408,8 @@ require('./main')
       },
       "progenitor": {
         "url": "http://strd6.github.io/editor/"
-      }
+      },
+      "name": "github"
     },
     "hygiene": {
       "version": "0.1.0",
@@ -2219,7 +2221,8 @@ require('./main')
       },
       "progenitor": {
         "url": "http://strd6.github.io/editor/"
-      }
+      },
+      "name": "runner"
     }
   },
   "remoteDependencies": [
