--- a/refactor-actions/index.html
+++ b/refactor-actions/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1382050599827">
+<html manifest="manifest.appcache?1382116601365">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -38,7 +38,7 @@ require('./main')
     "pixie.cson": {
       "path": "pixie.cson",
       "mode": "100644",
-      "content": "version: \"0.2.0\"\nwidth: 960\nheight: 800\nremoteDependencies: [\n  \"//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\"\n  \"//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\"\n  \"//code.jquery.com/jquery-1.10.1.min.js\"\n  \"//d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js\"\n  \"http://strd6.github.io/tempest/javascripts/envweb.js\"\n  \"http://strd6.github.io/require/v0.2.2.js\"\n]\ndependencies:\n  issues: \"STRd6/issues:v0.1.0\"\n  sandbox: \"STRd6/sandbox:v0.1.0\"\n  notifications: \"STRd6/notifications:master\"\n  md: \"STRd6/md:v0.2.7\"\n  github: \"STRd6/github:v0.3.1\"\n  hygiene: \"STRd6/hygiene:v0.1.0\"\n  runtime: \"STRd6/runtime:v0.1.1\"\n  packager: \"STRd6/packager:v0.3.2\"\n  filetree: \"STRd6/filetree:v0.2.0\"\n  runner: \"STRd6/runner:v0.1.0-alpha.1\"\n",
+      "content": "version: \"0.2.0\"\nwidth: 960\nheight: 800\nremoteDependencies: [\n  \"//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\"\n  \"//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\"\n  \"//code.jquery.com/jquery-1.10.1.min.js\"\n  \"//d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js\"\n  \"http://strd6.github.io/tempest/javascripts/envweb.js\"\n  \"http://strd6.github.io/require/v0.2.2.js\"\n]\ndependencies:\n  issues: \"STRd6/issues:v0.1.0\"\n  sandbox: \"STRd6/sandbox:v0.1.0\"\n  notifications: \"STRd6/notifications:master\"\n  md: \"STRd6/md:v0.2.7\"\n  github: \"STRd6/github:v0.3.1\"\n  hygiene: \"STRd6/hygiene:v0.1.0\"\n  runtime: \"STRd6/runtime:v0.1.1\"\n  packager: \"STRd6/packager:v0.3.2\"\n  filetree: \"STRd6/filetree:v0.2.0\"\n  runner: \"STRd6/runner:v0.1.0\"\n",
       "type": "blob"
     },
     "source/actions.coffee.md": {
@@ -145,7 +145,7 @@ require('./main')
     },
     "pixie": {
       "path": "pixie",
-      "content": "module.exports = {\"version\":\"0.2.0\",\"width\":960,\"height\":800,\"remoteDependencies\":[\"//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\",\"//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\",\"//code.jquery.com/jquery-1.10.1.min.js\",\"//d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js\",\"http://strd6.github.io/tempest/javascripts/envweb.js\",\"http://strd6.github.io/require/v0.2.2.js\"],\"dependencies\":{\"issues\":\"STRd6/issues:v0.1.0\",\"sandbox\":\"STRd6/sandbox:v0.1.0\",\"notifications\":\"STRd6/notifications:master\",\"md\":\"STRd6/md:v0.2.7\",\"github\":\"STRd6/github:v0.3.1\",\"hygiene\":\"STRd6/hygiene:v0.1.0\",\"runtime\":\"STRd6/runtime:v0.1.1\",\"packager\":\"STRd6/packager:v0.3.2\",\"filetree\":\"STRd6/filetree:v0.2.0\",\"runner\":\"STRd6/runner:v0.1.0-alpha.1\"}};",
+      "content": "module.exports = {\"version\":\"0.2.0\",\"width\":960,\"height\":800,\"remoteDependencies\":[\"//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\",\"//cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\",\"//code.jquery.com/jquery-1.10.1.min.js\",\"//d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js\",\"http://strd6.github.io/tempest/javascripts/envweb.js\",\"http://strd6.github.io/require/v0.2.2.js\"],\"dependencies\":{\"issues\":\"STRd6/issues:v0.1.0\",\"sandbox\":\"STRd6/sandbox:v0.1.0\",\"notifications\":\"STRd6/notifications:master\",\"md\":\"STRd6/md:v0.2.7\",\"github\":\"STRd6/github:v0.3.1\",\"hygiene\":\"STRd6/hygiene:v0.1.0\",\"runtime\":\"STRd6/runtime:v0.1.1\",\"packager\":\"STRd6/packager:v0.3.2\",\"filetree\":\"STRd6/filetree:v0.2.0\",\"runner\":\"STRd6/runner:v0.1.0\"}};",
       "type": "blob"
     },
     "source/actions": {
@@ -2086,7 +2086,7 @@ require('./main')
       "name": "filetree"
     },
     "runner": {
-      "version": "0.1.0-alpha.1",
+      "version": "0.1.0",
       "source": {
         "LICENSE": {
           "path": "LICENSE",
@@ -2103,7 +2103,7 @@ require('./main')
         "pixie.cson": {
           "path": "pixie.cson",
           "mode": "100644",
-          "content": "version: \"0.1.0-alpha.1\"\nentryPoint: \"runner\"\n",
+          "content": "version: \"0.1.0\"\nentryPoint: \"runner\"\n",
           "type": "blob"
         },
         "runner.coffee.md": {
@@ -2116,7 +2116,7 @@ require('./main')
       "distribution": {
         "pixie": {
           "path": "pixie",
-          "content": "module.exports = {\"version\":\"0.1.0-alpha.1\",\"entryPoint\":\"runner\"};",
+          "content": "module.exports = {\"version\":\"0.1.0\",\"entryPoint\":\"runner\"};",
           "type": "blob"
         },
         "runner": {
@@ -2217,7 +2217,7 @@ require('./main')
           "pull": true
         },
         "network_count": 0,
-        "branch": "v0.1.0-alpha.1",
+        "branch": "v0.1.0",
         "defaultBranch": "master"
       },
       "progenitor": {
