:ticket::santa: Updated in browser at strd6.github.io/editor

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1384561554580">
+<html manifest="manifest.appcache?1384561608517">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -931,7 +931,8 @@ require('./main')
         "subscribers_count": 1,
         "branch": "v0.2.9",
         "defaultBranch": "master"
-      }
+      },
+      "name": "md"
     },
     "github": {
       "version": "0.3.3",
