:ru::tent: Updated in browser at strd6.github.io/editor

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1385756921183">
+<html manifest="manifest.appcache?1385756980632">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -649,7 +649,8 @@ require('./main')
         "branch": "v0.3.1",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "builder"
     },
     "issues": {
       "source": {
@@ -818,7 +819,8 @@ require('./main')
         "branch": "v0.2.0",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "issues"
     },
     "sandbox": {
       "source": {
@@ -960,7 +962,8 @@ require('./main')
         "branch": "v0.2.0",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "sandbox"
     },
     "notifications": {
       "source": {
@@ -1113,7 +1116,8 @@ require('./main')
         "branch": "v0.2.0",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "notifications"
     },
     "md": {
       "source": {
@@ -1347,7 +1351,8 @@ require('./main')
         "branch": "v0.3.0",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "md"
     },
     "github": {
       "source": {
@@ -1852,9 +1857,11 @@ require('./main')
             "branch": "v0.2.0",
             "defaultBranch": "master"
           },
-          "dependencies": {}
+          "dependencies": {},
+          "name": "emojer"
         }
-      }
+      },
+      "name": "github"
     },
     "hygiene": {
       "source": {
@@ -2007,7 +2014,8 @@ require('./main')
         "branch": "v0.2.0",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "hygiene"
     },
     "runtime": {
       "source": {
@@ -2160,7 +2168,8 @@ require('./main')
         "branch": "v0.2.0",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "runtime"
     },
     "packager": {
       "source": {
@@ -2515,7 +2524,8 @@ require('./main')
           },
           "dependencies": {}
         }
-      }
+      },
+      "name": "packager"
     },
     "filetree": {
       "source": {
@@ -2717,7 +2727,8 @@ require('./main')
         "branch": "v0.3.0",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "filetree"
     },
     "runner": {
       "source": {
@@ -2859,7 +2870,8 @@ require('./main')
         "branch": "v0.2.0",
         "defaultBranch": "master"
       },
-      "dependencies": {}
+      "dependencies": {},
+      "name": "runner"
     }
   }
 });
