--- a/images/index.html
+++ b/images/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1392401023403">
+<html manifest="manifest.appcache?1392401732105">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -285,7 +285,7 @@ require('./main')
     "test/images.coffee": {
       "path": "test/images.coffee",
       "mode": "100644",
-      "content": "Images = require \"../lib/images\"\n\ndescribe \"images\", ->\n  it \"should convert\", ->\n    result = Images.convert [\n      path: \"images/test.png\"\n      content: atob \"iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAALUlEQVRYR+3QQREAAAABQfqXFsNnFTizzXk99+MAAQIECBAgQIAAAQIECBAgMBo/ACHo7lH9AAAAAElFTkSuQmCC\"\n    ]\n\n    console.log result\n\n    assert result.test\n",
+      "content": "Images = require \"../lib/images\"\n\ndescribe \"images\", ->\n  it \"should convert\", ->\n    testImage = atob \"iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAALUlEQVRYR+3QQREAAAABQfqXFsNnFTizzXk99+MAAQIECBAgQIAAAQIECBAgMBo/ACHo7lH9AAAAAElFTkSuQmCC\"\n    result = Images.convert [{\n      path: \"images/test.png\"\n      content: testImage\n    }, {\n      path: \"images/yolo.png\"\n      content: testImage\n    }, {\n      path: \"main.coffee.md\"\n      content: \"Not an image\"\n    }]\n\n    assert result.test\n    assert result.yolo\n    assert !result.main\n",
       "type": "blob"
     }
   },
@@ -382,7 +382,7 @@ require('./main')
     },
     "test/images": {
       "path": "test/images",
-      "content": "(function() {\n  var Images;\n\n  Images = require(\"../lib/images\");\n\n  describe(\"images\", function() {\n    return it(\"should convert\", function() {\n      var result;\n      result = Images.convert([\n        {\n          path: \"images/test.png\",\n          content: atob(\"iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAALUlEQVRYR+3QQREAAAABQfqXFsNnFTizzXk99+MAAQIECBAgQIAAAQIECBAgMBo/ACHo7lH9AAAAAElFTkSuQmCC\")\n        }\n      ]);\n      console.log(result);\n      return assert(result.test);\n    });\n  });\n\n}).call(this);\n\n//# sourceURL=test/images.coffee",
+      "content": "(function() {\n  var Images;\n\n  Images = require(\"../lib/images\");\n\n  describe(\"images\", function() {\n    return it(\"should convert\", function() {\n      var result, testImage;\n      testImage = atob(\"iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAALUlEQVRYR+3QQREAAAABQfqXFsNnFTizzXk99+MAAQIECBAgQIAAAQIECBAgMBo/ACHo7lH9AAAAAElFTkSuQmCC\");\n      result = Images.convert([\n        {\n          path: \"images/test.png\",\n          content: testImage\n        }, {\n          path: \"images/yolo.png\",\n          content: testImage\n        }, {\n          path: \"main.coffee.md\",\n          content: \"Not an image\"\n        }\n      ]);\n      assert(result.test);\n      assert(result.yolo);\n      return assert(!result.main);\n    });\n  });\n\n}).call(this);\n\n//# sourceURL=test/images.coffee",
       "type": "blob"
     }
   },
