--- a/update-md/index.html
+++ b/update-md/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1396043440393">
+<html manifest="manifest.appcache?1396044353135">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -207,7 +207,7 @@ require('./main')
     "pixie.cson": {
       "path": "pixie.cson",
       "mode": "100644",
-      "content": "version: \"0.3.0\"\nentryPoint: \"main\"\nwidth: 960\nheight: 800\nremoteDependencies: [\n  \"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\"\n  \"https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\"\n  \"https://code.jquery.com/jquery-1.10.1.min.js\"\n  \"http://www.danielx.net/tempest/javascripts/envweb-v0.4.7.js\"\n]\ndependencies:\n  analytics: \"distri/google-analytics:v0.1.0\"\n  builder: \"distri/builder:v0.3.5\"\n  chrapps: \"distri/chrapps:v0.1.0\"\n  cson: \"distri/cson:v0.1.0\"\n  issues: \"STRd6/issues:v0.2.0\"\n  sandbox: \"STRd6/sandbox:v0.2.0\"\n  notifications: \"distri/notifications:v0.3.0\"\n  md: \"distri/md:v0.4.1-pre.0\"\n  github: \"STRd6/github:v0.4.2\"\n  hygiene: \"STRd6/hygiene:v0.2.0\"\n  runtime: \"distri/runtime:v0.3.0\"\n  packager: \"distri/packager:v0.5.5\"\n  filetree: \"STRd6/filetree:v0.3.0\"\n  runner: \"STRd6/runner:v0.2.0\"\n  \"value-widget\": \"distri/value-widget:v0.1.2\"\n",
+      "content": "version: \"0.3.0\"\nentryPoint: \"main\"\nwidth: 960\nheight: 800\nremoteDependencies: [\n  \"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\"\n  \"https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\"\n  \"https://code.jquery.com/jquery-1.10.1.min.js\"\n  \"http://www.danielx.net/tempest/javascripts/envweb-v0.4.7.js\"\n]\ndependencies:\n  analytics: \"distri/google-analytics:v0.1.0\"\n  builder: \"distri/builder:v0.3.5\"\n  chrapps: \"distri/chrapps:v0.1.0\"\n  cson: \"distri/cson:v0.1.0\"\n  issues: \"STRd6/issues:v0.2.0\"\n  sandbox: \"STRd6/sandbox:v0.2.0\"\n  notifications: \"distri/notifications:v0.3.0\"\n  md: \"distri/md:v0.4.1\"\n  github: \"STRd6/github:v0.4.2\"\n  hygiene: \"STRd6/hygiene:v0.2.0\"\n  runtime: \"distri/runtime:v0.3.0\"\n  packager: \"distri/packager:v0.5.5\"\n  filetree: \"STRd6/filetree:v0.3.0\"\n  runner: \"STRd6/runner:v0.2.0\"\n  \"value-widget\": \"distri/value-widget:v0.1.2\"\n",
       "type": "blob"
     },
     "source/actions.coffee.md": {
@@ -307,7 +307,7 @@ require('./main')
     },
     "pixie": {
       "path": "pixie",
-      "content": "module.exports = {\"version\":\"0.3.0\",\"entryPoint\":\"main\",\"width\":960,\"height\":800,\"remoteDependencies\":[\"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\",\"https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\",\"https://code.jquery.com/jquery-1.10.1.min.js\",\"http://www.danielx.net/tempest/javascripts/envweb-v0.4.7.js\"],\"dependencies\":{\"analytics\":\"distri/google-analytics:v0.1.0\",\"builder\":\"distri/builder:v0.3.5\",\"chrapps\":\"distri/chrapps:v0.1.0\",\"cson\":\"distri/cson:v0.1.0\",\"issues\":\"STRd6/issues:v0.2.0\",\"sandbox\":\"STRd6/sandbox:v0.2.0\",\"notifications\":\"distri/notifications:v0.3.0\",\"md\":\"distri/md:v0.4.1-pre.0\",\"github\":\"STRd6/github:v0.4.2\",\"hygiene\":\"STRd6/hygiene:v0.2.0\",\"runtime\":\"distri/runtime:v0.3.0\",\"packager\":\"distri/packager:v0.5.5\",\"filetree\":\"STRd6/filetree:v0.3.0\",\"runner\":\"STRd6/runner:v0.2.0\",\"value-widget\":\"distri/value-widget:v0.1.2\"}};",
+      "content": "module.exports = {\"version\":\"0.3.0\",\"entryPoint\":\"main\",\"width\":960,\"height\":800,\"remoteDependencies\":[\"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\",\"https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.6.3/coffee-script.min.js\",\"https://code.jquery.com/jquery-1.10.1.min.js\",\"http://www.danielx.net/tempest/javascripts/envweb-v0.4.7.js\"],\"dependencies\":{\"analytics\":\"distri/google-analytics:v0.1.0\",\"builder\":\"distri/builder:v0.3.5\",\"chrapps\":\"distri/chrapps:v0.1.0\",\"cson\":\"distri/cson:v0.1.0\",\"issues\":\"STRd6/issues:v0.2.0\",\"sandbox\":\"STRd6/sandbox:v0.2.0\",\"notifications\":\"distri/notifications:v0.3.0\",\"md\":\"distri/md:v0.4.1\",\"github\":\"STRd6/github:v0.4.2\",\"hygiene\":\"STRd6/hygiene:v0.2.0\",\"runtime\":\"distri/runtime:v0.3.0\",\"packager\":\"distri/packager:v0.5.5\",\"filetree\":\"STRd6/filetree:v0.3.0\",\"runner\":\"STRd6/runner:v0.2.0\",\"value-widget\":\"distri/value-widget:v0.1.2\"}};",
       "type": "blob"
     },
     "source/actions": {
@@ -2358,7 +2358,7 @@ require('./main')
         "pixie.cson": {
           "path": "pixie.cson",
           "mode": "100644",
-          "content": "version: \"0.4.1-pre.0\"\nremoteDependencies: [\n  \"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\"\n  \"https://code.jquery.com/jquery-1.10.1.min.js\" # TODO: Eliminate this, currently just using for Deferred\n]\ndependencies:\n  require: \"distri/require:v0.4.2\"\n  interactive: \"distri/interactive:v0.8.3-pre.0\"\n",
+          "content": "version: \"0.4.1\"\nremoteDependencies: [\n  \"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\"\n  \"https://code.jquery.com/jquery-1.10.1.min.js\" # TODO: Eliminate this, currently just using for Deferred\n]\ndependencies:\n  require: \"distri/require:v0.4.2\"\n  interactive: \"distri/interactive:v0.8.3\"\n",
           "type": "blob"
         },
         "template.coffee.md": {
@@ -2414,7 +2414,7 @@ require('./main')
         },
         "pixie": {
           "path": "pixie",
-          "content": "module.exports = {\"version\":\"0.4.1-pre.0\",\"remoteDependencies\":[\"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\",\"https://code.jquery.com/jquery-1.10.1.min.js\"],\"dependencies\":{\"require\":\"distri/require:v0.4.2\",\"interactive\":\"distri/interactive:v0.8.3-pre.0\"}};",
+          "content": "module.exports = {\"version\":\"0.4.1\",\"remoteDependencies\":[\"https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js\",\"https://code.jquery.com/jquery-1.10.1.min.js\"],\"dependencies\":{\"require\":\"distri/require:v0.4.2\",\"interactive\":\"distri/interactive:v0.8.3\"}};",
           "type": "blob"
         },
         "template": {
@@ -2441,7 +2441,7 @@ require('./main')
       "progenitor": {
         "url": "http://strd6.github.io/editor/"
       },
-      "version": "0.4.1-pre.0",
+      "version": "0.4.1",
       "entryPoint": "main",
       "remoteDependencies": [
         "https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js",
@@ -2559,7 +2559,7 @@ require('./main')
         },
         "network_count": 0,
         "subscribers_count": 1,
-        "branch": "v0.4.1-pre.0",
+        "branch": "v0.4.1",
         "publishBranch": "gh-pages"
       },
       "dependencies": {
@@ -2790,7 +2790,7 @@ require('./main')
             "pixie.cson": {
               "path": "pixie.cson",
               "mode": "100644",
-              "content": "version: \"0.8.3-pre.0\"\nentryPoint: \"interactive\"\n",
+              "content": "version: \"0.8.3\"\nentryPoint: \"interactive\"\n",
               "type": "blob"
             }
           },
@@ -2802,14 +2802,14 @@ require('./main')
             },
             "pixie": {
               "path": "pixie",
-              "content": "module.exports = {\"version\":\"0.8.3-pre.0\",\"entryPoint\":\"interactive\"};",
+              "content": "module.exports = {\"version\":\"0.8.3\",\"entryPoint\":\"interactive\"};",
               "type": "blob"
             }
           },
           "progenitor": {
             "url": "http://strd6.github.io/editor/"
           },
-          "version": "0.8.3-pre.0",
+          "version": "0.8.3",
           "entryPoint": "interactive",
           "repository": {
             "id": 13078696,
@@ -2923,7 +2923,7 @@ require('./main')
             },
             "network_count": 0,
             "subscribers_count": 1,
-            "branch": "v0.8.3-pre.0",
+            "branch": "v0.8.3",
             "publishBranch": "gh-pages"
           },
           "dependencies": {}
