:boy::flags: Updated in browser at strd6.github.io/editor

--- a/test-pub/index.html
+++ b/test-pub/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1397615677040">
+<html manifest="manifest.appcache?1397616072300">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -9,8 +9,8 @@
   </head>
   <body>
     <script>
-  window[STRd6/editor:test-pub] = function(PACKAGE) {
-    delete window[STRd6/editor:test-pub];
+  window["STRd6/editor:test-pub"] = function(PACKAGE) {
+    delete window["STRd6/editor:test-pub"];
     var oldRequire = window.Require;
     (function() {
   var annotateSourceURL, cacheFor, circularGuard, defaultEntryPoint, fileSeparator, generateRequireFn, global, isPackage, loadModule, loadPackage, loadPath, normalizePath, rootModule, startsWith,
