:milky_way::broken_heart: Updated in browser at strd6.github.io/editor

--- a/update-packager/index.html
+++ b/update-packager/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1404055223950">
+<html manifest="manifest.appcache?1404057637774">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
@@ -181,6 +181,6 @@
     require('./' + PACKAGE.entryPoint);
   };
 </script>
-    <script src=undefined></script>
+    <script src="../update-packager.json.js"></script>
   </body>
 </html>
