:ship::smile_cat: Updated in browser at strd6.github.io/editor

--- a/whimsy/index.html
+++ b/whimsy/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1442890961323">
+<html manifest="manifest.appcache?1442892173213">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   </head>
   <body>
     <script>
-  window["STRd6/editor:whimsy"] = function(PACKAGE) {
-    delete window["STRd6/editor:whimsy"];
+  window["STRd6/fillmore:whimsy"] = function(PACKAGE) {
+    delete window["STRd6/fillmore:whimsy"];
     var oldRequire = window.Require;
     (function() {
   var annotateSourceURL, cacheFor, circularGuard, defaultEntryPoint, fileSeparator, generateRequireFn, global, isPackage, loadModule, loadPackage, loadPath, normalizePath, publicAPI, rootModule, startsWith,
