--- a/json-packages/index.html
+++ b/json-packages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1455846369639">
+<html manifest="manifest.appcache?1455847540528">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"></script>
@@ -21,6 +21,7 @@
       require('./' + PACKAGE.entryPoint);
     })(xhr.response)
   };
+  xhr.send();
 </script>
   </body>
 </html>
