:nail_care::spaghetti: Updated at https://danielx.net/editor/

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1456461398266">
+<html manifest="manifest.appcache?1456464266259">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   </head>
   <body>
     <script>
   xhr = new XMLHttpRequest;
-  url = "master.json";
+  url = "undefined.json";
   xhr.open("GET", url, true);
   xhr.responseType = "json";
   xhr.onload = function() {
