:evergreen_tree::lollipop: Updated at https://danielx.net/editor/

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1456464702510">
+<html manifest="manifest.appcache?1456465051159">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.0/ace.js"></script>
@@ -8,7 +8,7 @@
   <body>
     <script>
   xhr = new XMLHttpRequest;
-  url = "undefined.json";
+  url = "master.json";
   xhr.open("GET", url, true);
   xhr.responseType = "json";
   xhr.onload = function() {
