:sunglasses::four: Updated at https://danielx.net/editor/

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1468801917253">
+<html manifest="manifest.appcache?1469678115015">
   <head>
     <meta charset="utf-8">
     <link rel="Help" href="./docs/">
     <title>Daniel X's Editor</title>
     <meta name="description" content="Edit and publish code directly in the browser. Compiles down to HTML, CSS, and JavaScript to be easily served on GitHub pages, S3, or any other static host.">
     <link rel="Progenitor" href="https://danielx.net/editor/">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.4/ace.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.4/ext-language_tools.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/coffee-script/1.7.1/coffee-script.min.js"></script>
   </head>
   <body>
