:purple_heart::anchor: Updated at https://danielx.net/editor/

--- a/appcache-config/index.html
+++ b/appcache-config/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache?1481400364999">
+<htmlundefined>
   <head>
     <meta charset="utf-8">
     <link rel="Help" href="./docs/">
